chore: fix formatting